--- a/css/main-pawel.css
+++ b/css/main-pawel.css
@@ -360,7 +360,7 @@ input[type="number"]{border:1px solid #81828E}
 #tab4 .brand-name{width:200px}
 .sidebar-li-list.visitedTab{color:#32333B;font-weight:600;pointer-events:all}
 .sidebar-li-list.visitedTab:not(.active):hover {background: transparent}
-.color-img{width:594px;height:533px;margin-top:-20px}
+.color-img{width:594px;margin-top:-20px}
 .img-hidden{display:none}
 button.nextStepActive:hover{background-color:#CB313A!important}
 input[type="number"].additional-number-input:hover{border:1px solid #32333B}
@@ -684,7 +684,7 @@ p.info.common.certus-max.certus-standard.exima-max.exima-x1g.exima-x1d.available
 td.price-label{text-align: center;}
 
 .warning th {text-align: left}
-.warning th:nth-of-type(3) {text-align: center; width: 20%;}
+/* .warning th:nth-of-type(3) {text-align: center; width: 20%;} */
 
 #tab8 .product{width: 44%;}
  
@@ -740,3 +740,16 @@ input.btn-send:hover{background-color: #CB313A;transition: 0.2s}
 
     #tab7 .model-over-hidden{padding-right: 15px;-ms-overflow-style: none;}
     .choosen-brand.lamp-type{display:flex;flex-direction:column;font-size:11px;align-items:flex-start;color:#32333B;width:100%;height:auto;border-bottom:1px solid #E4E5ED;position:relative;cursor:pointer;padding:20px 0 19px;list-style-type:none}
+
+    /* 13 czerwca  */
+
+    #textarea-for-print{display: none;}
+    .table.table-striped{width: 800px;padding-top: 30px;}
+    
+    .warning{color: #32333B}
+    table{table-layout: fixed;}
+
+    .warning th:nth-of-type(3) , .price-label{text-align: right!important ;}
+    .tab8-buttons{padding:30px 0}
+
+    /* border-bottom:1px solid #E4E5ED */
